<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/idBtnAdauga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="26dp"
        android:text="@string/btnInsert"
        app:layout_constraintBottom_toTopOf="@+id/idBtnImagini"
        app:layout_constraintEnd_toEndOf="@+id/idBtnImagini" />

    <Button
        android:id="@+id/idBtnLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="31dp"
        android:text="@string/btnSelect"
        app:layout_constraintBottom_toTopOf="@+id/idBtnAdauga"
        app:layout_constraintStart_toStartOf="@+id/idBtnAdauga" />

    <Button
        android:id="@+id/idBtnImagini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="37dp"
        android:text="@string/btnImagini"
        app:layout_constraintBottom_toTopOf="@+id/idBtnPreferinte"
        app:layout_constraintStart_toStartOf="@+id/idBtnPreferinte" />

    <Button
        android:id="@+id/idBtnAPI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="18dp"
        android:text="@string/btnAPI"
        app:layout_constraintStart_toStartOf="@+id/idBtnPreferinte"
        app:layout_constraintTop_toBottomOf="@+id/idBtnPreferinte" />

    <Button
        android:id="@+id/idBtnPreferinte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPreferinte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/idBtnXML"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="45dp"
        android:text="XML"
        app:layout_constraintStart_toStartOf="@+id/idBtnAPI"
        app:layout_constraintTop_toBottomOf="@+id/idBtnAPI" />
</androidx.constraintlayout.widget.ConstraintLayout>